# enterprise-ai-analyst

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  run.sh
.github/workflows/: ci.yml
demo/sample_data/: company_policy.md  financial_report.md  meeting_notes.md  product_docs.md
infra/: Dockerfile  docker-compose.yml
src/: config.py  models.py
src/agents/: base.py  orchestrator.py  rag_agent.py  sql_agent.py  summarizer.py
src/api/: app.py  dependencies.py
src/api/routes/: generate.py  health.py  history.py  ingest.py  query.py  query_stream.py  retrieve.py
src/evaluation/: faithfulness.py  hallucination.py  relevance.py
src/integrations/data_warehouse/: duckdb_store.py
src/integrations/graph_db/: neo4j_store.py
src/integrations/llm_providers/: anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py
src/integrations/vector_db/: qdrant_store.py
src/observability/: logging.py  metrics.py  tracing.py
src/rag/: ingestion.py
src/rag/chunking/: base.py  benchmark.py  document_structure.py  fixed_size.py  semantic.py
src/rag/embeddings/: pipeline.py
src/rag/retrieval/: hybrid.py  vector_only.py
tests/integration/: test_api.py  test_qdrant.py
tests/unit/: test_agent_streaming.py  test_chat_history.py  test_chunkers.py  test_config.py  test_duckdb_store.py  test_models.py  test_orchestrator.py  test_providers.py  test_sql_agent.py
web/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
web/server/: index.ts  ws.ts
web/server/routes/: api.ts  (+1 more)
(+10 files in other folders)
